make buttons disabled til load; fix hidden freq slider spacing

--- a/src/App.css
+++ b/src/App.css
@@ -82,3 +82,10 @@ button {
   text-align: left;
   display: inline-block;
 }
+
+.slider-input-filler {
+  display: inline-block;
+  margin-left: 8px;
+  margin-right: 8px;
+  width: 300px;
+}
